added trump data

--- a/BucketWeekends.ipynb
+++ b/BucketWeekends.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,426 +71,89 @@
     "        # save new file\n",
     "        df.to_csv(Path(bucket_dir, file.name), index=False)\n",
     "\n",
+    "    print('Finished bucketing: {}\\n'.format(src_path))\n",
+    "    \n",
+    "def change_date(date):\n",
+    "    # drop rows with no dates\n",
+    "    if not is_date(date):\n",
+    "        return 0\n",
+    "\n",
+    "    date = date.split(' ')[0]\n",
+    "    date_time_obj = datetime.strptime(date, '%Y-%m-%d')\n",
+    "    day_no = date_time_obj.weekday()\n",
+    "\n",
+    "    # if weekend, subtract days to make it Friday\n",
+    "    if day_no  == 5:\n",
+    "        new_date = date_time_obj - timedelta(days=1)\n",
+    "        return new_date.strftime('%Y-%m-%d')\n",
+    "    elif day_no == 6:\n",
+    "        new_date = date_time_obj - timedelta(days=2)\n",
+    "        return new_date.strftime('%Y-%m-%d')\n",
+    "    else:\n",
+    "        return date\n",
+    "    \n",
+    "def bucket_csvs2(src_path, bucket_path):\n",
+    "    src_dir = Path(src_path)\n",
+    "    bucket_dir = Path(bucket_path)\n",
+    "    bucket_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "    # get file paths\n",
+    "    files = list(src_dir.rglob('*.csv'))\n",
+    "    for file in files:\n",
+    "        print('Processing: {}'.format(file.name))\n",
+    "\n",
+    "        # load file\n",
+    "        df = pd.read_csv(file)\n",
+    "        df['Date'] = df['Date'].map(change_date)\n",
+    "        df = df[df['Date'] != 0]\n",
+    "\n",
+    "        # save new file\n",
+    "        df.to_csv(Path(bucket_dir, file.name), index=False)\n",
+    "\n",
     "    print('Finished bucketing: {}\\n'.format(src_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing: Business Insider.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8344/8344 [00:02<00:00, 3675.89it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: CNN.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 14288/14288 [00:06<00:00, 2310.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: CNN_sentiment.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 856/856 [00:00<00:00, 3190.66it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: New York Times.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 30257/30257 [00:08<00:00, 3423.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: New York Times_sentiment.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 717/717 [00:00<00:00, 3152.70it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: Washington Post.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12051/12051 [00:04<00:00, 2913.73it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: Washington Post_sentiment.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 565/565 [00:00<00:00, 2462.92it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing: Business Insider.csv\n",
+      "Processing: CNN.csv\n",
+      "Processing: CNN_sentiment.csv\n",
+      "Processing: New York Times.csv\n",
+      "Processing: New York Times_sentiment.csv\n",
+      "Processing: Washington Post.csv\n",
+      "Processing: Washington Post_sentiment.csv\n",
       "Finished bucketing: data/in/news/\n",
       "\n",
-      "Processing: ArianaGrande.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3104/3104 [00:01<00:00, 1773.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: BarackObama.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2863/2863 [00:01<00:00, 2814.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: BarackObama_sentiment.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 696/696 [00:00<00:00, 2251.16it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: britneyspears.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2776/2776 [00:01<00:00, 2304.16it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: cnnbrk.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1842/1842 [00:00<00:00, 3286.35it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: cnnbrk_sentiment.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 185/185 [00:00<00:00, 2809.31it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: Cristiano.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2507/2507 [00:00<00:00, 2588.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: ddlovato.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2217/2217 [00:00<00:00, 2803.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: instagram.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2577/2577 [00:00<00:00, 2882.16it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: jimmyfallon.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3123/3123 [00:01<00:00, 2483.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: jtimberlake.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2478/2478 [00:01<00:00, 2397.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: justinbieber.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2000/2000 [00:00<00:00, 2067.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: katyperry.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2924/2924 [00:01<00:00, 2789.55it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: KimKardashian.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2939/2939 [00:01<00:00, 2716.00it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: KimKardashian_sentiment.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 491/491 [00:00<00:00, 2797.22it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: ladygaga.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2329/2329 [00:00<00:00, 2908.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: rihanna.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2877/2877 [00:00<00:00, 2952.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: selenagomez.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2913/2913 [00:00<00:00, 3068.09it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: shakira.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2530/2530 [00:00<00:00, 3003.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: taylorswift13.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2029/2029 [00:00<00:00, 3005.05it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: TheEllenShow.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3147/3147 [00:01<00:00, 2016.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: YouTube.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rows: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3077/3077 [00:01<00:00, 2799.73it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing: ArianaGrande.csv\n",
+      "Processing: BarackObama.csv\n",
+      "Processing: BarackObama_sentiment.csv\n",
+      "Processing: britneyspears.csv\n",
+      "Processing: cnnbrk.csv\n",
+      "Processing: cnnbrk_sentiment.csv\n",
+      "Processing: Cristiano.csv\n",
+      "Processing: ddlovato.csv\n",
+      "Processing: instagram.csv\n",
+      "Processing: jimmyfallon.csv\n",
+      "Processing: jtimberlake.csv\n",
+      "Processing: justinbieber.csv\n",
+      "Processing: katyperry.csv\n",
+      "Processing: KimKardashian.csv\n",
+      "Processing: KimKardashian_sentiment.csv\n",
+      "Processing: ladygaga.csv\n",
+      "Processing: rihanna.csv\n",
+      "Processing: selenagomez.csv\n",
+      "Processing: shakira.csv\n",
+      "Processing: taylorswift13.csv\n",
+      "Processing: TheEllenShow.csv\n",
+      "Processing: Trump.csv\n",
+      "Processing: YouTube.csv\n",
       "Finished bucketing: data/in/twitter/\n",
       "\n"
      ]
@@ -498,8 +161,8 @@
    ],
    "source": [
     "# Run bucketing\n",
-    "bucket_csvs('data/in/news/', 'data/bucket/news/')\n",
-    "bucket_csvs('data/in/twitter/', 'data/bucket/twitter/')"
+    "bucket_csvs2('data/in/news/', 'data/bucket/news/')\n",
+    "bucket_csvs2('data/in/twitter/', 'data/bucket/twitter/')"
    ]
   }
  ],
