--- a/Feature Builder.ipynb
+++ b/Feature Builder.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "influencers = ['BarackObama_sentiment','cnnbrk_sentiment', 'KimKardashian_sentiment']\n",
+    "influencers = ['BarackObama_sentiment','cnnbrk_sentiment', 'KimKardashian_sentiment', 'Trump_sentiment']\n",
     "sources = ['New York Times_sentiment', 'CNN_sentiment', 'Washington Post_sentiment']\n",
     "stocks = ['VIX_Predict', 'SPY_Predict']"
    ]
