--- a/Sentiment Maker.ipynb
+++ b/Sentiment Maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "news_dir = 'data/in/news/'\n",
-    "twitter_dir = 'data/in/twitter/'\n",
-    "influencers = ['BarackObama','cnnbrk', 'KimKardashian']\n",
+    "news_dir = 'data/bucket/news/'\n",
+    "twitter_dir = 'data/bucket/twitter/'\n",
+    "influencers = ['BarackObama','cnnbrk', 'KimKardashian', 'Trump']\n",
     "sources = ['New York Times', 'CNN', 'Washington Post']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sentimentTwiiter(influencers):\n",
     "    for influencer in influencers:\n",
-    "        df = pd.read_csv(twitter_dir+influencer+'.csv', parse_dates=['Date'])\n",
+    "        print('Processing:', influencer)\n",
+    "        df = pd.read_csv(twitter_dir+influencer+'.csv')\n",
+    "        df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n",
     "        df['Date'] = pd.to_datetime(df['Date'].dt.normalize())\n",
     "        df['sentiment_score'] = df['content'].apply(sentiment_analyzer_scores)\n",
+    "        df['number_of_likes'] = df['number_of_likes'].map(lambda x: x if isinstance(x, int) else 0)\n",
     "        df2 = df.groupby('Date').sum()\n",
+    "        df2 = df2.astype({'number_of_likes': 'int64'})\n",
     "        df2['heuristic_score'] = df.groupby('Date').apply(heuristic_1)\n",
     "        df2 = df2.reset_index()\n",
     "        df2 = df2[['Date','sentiment_score', 'heuristic_score']]\n",
@@ -83,13 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sentimentNews(sources):\n",
     "    for source in sources:\n",
-    "        df = pd.read_csv(news_dir+source+'.csv', parse_dates=['Date'])\n",
+    "        print('Processing:', source)\n",
+    "        df = pd.read_csv(news_dir+source+'.csv')\n",
+    "        df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n",
     "        df['Date'] = pd.to_datetime(df['Date'].dt.normalize())\n",
     "        df['sentiment_score'] = df['title'].apply(sentiment_analyzer_scores)\n",
     "        df2 = df.groupby('Date').sum()\n",
@@ -101,15 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing: BarackObama\n",
+      "Processing: cnnbrk\n",
+      "Processing: KimKardashian\n",
+      "Processing: Trump\n",
       "done\n",
-      "Failed to score content: nan\n",
+      "Processing: New York Times\n",
+      "Processing: CNN\n",
+      "Processing: Washington Post\n",
       "done\n"
      ]
     }
@@ -118,425 +130,6 @@
     "#AUTOMATION\n",
     "sentimentTwiiter(influencers)\n",
     "sentimentNews(sources)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(twitter_dir+'BarackObama.csv', parse_dates=['Date'])\n",
-    "df['Date'] = pd.to_datetime(df['Date'].dt.normalize())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df.groupby('Date').sum()\n",
-    "df2['heuristic_score'] = df.groupby('Date').apply(heuristic_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['number_of_likes', 'number_of_shares', 'sentiment_score',\n",
-       "       'heuristic_score'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df2.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>sentiment_score</th>\n",
-       "      <th>heuristic_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2014-01-08</td>\n",
-       "      <td>2.1428</td>\n",
-       "      <td>14.570481</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2014-01-09</td>\n",
-       "      <td>0.5106</td>\n",
-       "      <td>4.453833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2014-01-10</td>\n",
-       "      <td>0.4404</td>\n",
-       "      <td>3.208839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2014-01-11</td>\n",
-       "      <td>0.7096</td>\n",
-       "      <td>5.263515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2014-01-12</td>\n",
-       "      <td>-0.0949</td>\n",
-       "      <td>-0.853277</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>691</td>\n",
-       "      <td>2016-12-07</td>\n",
-       "      <td>-0.7224</td>\n",
-       "      <td>-5.853238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>692</td>\n",
-       "      <td>2016-12-08</td>\n",
-       "      <td>1.5873</td>\n",
-       "      <td>14.700298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>693</td>\n",
-       "      <td>2016-12-09</td>\n",
-       "      <td>-0.3821</td>\n",
-       "      <td>-3.302238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>694</td>\n",
-       "      <td>2016-12-10</td>\n",
-       "      <td>0.6381</td>\n",
-       "      <td>4.420319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>695</td>\n",
-       "      <td>2017-10-01</td>\n",
-       "      <td>0.4215</td>\n",
-       "      <td>4.454555</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>696 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date  sentiment_score  heuristic_score\n",
-       "0   2014-01-08           2.1428        14.570481\n",
-       "1   2014-01-09           0.5106         4.453833\n",
-       "2   2014-01-10           0.4404         3.208839\n",
-       "3   2014-01-11           0.7096         5.263515\n",
-       "4   2014-01-12          -0.0949        -0.853277\n",
-       "..         ...              ...              ...\n",
-       "691 2016-12-07          -0.7224        -5.853238\n",
-       "692 2016-12-08           1.5873        14.700298\n",
-       "693 2016-12-09          -0.3821        -3.302238\n",
-       "694 2016-12-10           0.6381         4.420319\n",
-       "695 2017-10-01           0.4215         4.454555\n",
-       "\n",
-       "[696 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2[['Date','sentiment_score', 'heuristic_score']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x11aa1a160>"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.groupby('Date').aapl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df3 = df2.groupby('Date').apply(heuristic_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Date\n",
-       "2014-01-08    14.570481\n",
-       "2014-01-09     4.453833\n",
-       "2014-01-10     3.208839\n",
-       "2014-01-11     5.263515\n",
-       "2014-01-12    -0.853277\n",
-       "                ...    \n",
-       "2016-12-07    -5.853238\n",
-       "2016-12-08    14.700298\n",
-       "2016-12-09    -3.302238\n",
-       "2016-12-10     4.420319\n",
-       "2017-10-01     4.454555\n",
-       "Length: 696, dtype: float64"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df['Score'] = df['title'].apply(sentiment_analyzer_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>author</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>37 Who Saw Murder Didn't Call the Police - The...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2014-05-08</td>\n",
-       "      <td>-0.6908</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>The Pillow Cure - The New York Times</td>\n",
-       "      <td>Penelope Green</td>\n",
-       "      <td>2015-03-26</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>John Ashbery: By the Book - The New York Times</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2015-05-13</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Drink to Your Health (in Moderation), the Scie...</td>\n",
-       "      <td>Aaron E. Carroll</td>\n",
-       "      <td>2015-12-22</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Simple Rules for Healthy Eating - The New York...</td>\n",
-       "      <td>Aaron E. Carroll</td>\n",
-       "      <td>2015-12-28</td>\n",
-       "      <td>0.4019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30252</td>\n",
-       "      <td>How a Trump Adviser Repeatedly Sought a Meetin...</td>\n",
-       "      <td>Troy Griggs</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30253</td>\n",
-       "      <td>Satellite Images Show 1,800 Buildings Destroye...</td>\n",
-       "      <td>Anjali Singhvi</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>-0.6808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30254</td>\n",
-       "      <td>Trump Could Save More Than $1 Billion Under Hi...</td>\n",
-       "      <td>Jesse Drucker</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0.4939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30255</td>\n",
-       "      <td>Opinion | The Republican’s Guide to Presidenti...</td>\n",
-       "      <td>The Editorial Board</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30256</td>\n",
-       "      <td>Opinion | Who Can Beat Trump in 2020? - The Ne...</td>\n",
-       "      <td>Jason Zengerle</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>30257 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   title               author  \\\n",
-       "0      37 Who Saw Murder Didn't Call the Police - The...                  NaN   \n",
-       "1                   The Pillow Cure - The New York Times       Penelope Green   \n",
-       "2         John Ashbery: By the Book - The New York Times                  NaN   \n",
-       "3      Drink to Your Health (in Moderation), the Scie...     Aaron E. Carroll   \n",
-       "4      Simple Rules for Healthy Eating - The New York...     Aaron E. Carroll   \n",
-       "...                                                  ...                  ...   \n",
-       "30252  How a Trump Adviser Repeatedly Sought a Meetin...          Troy Griggs   \n",
-       "30253  Satellite Images Show 1,800 Buildings Destroye...       Anjali Singhvi   \n",
-       "30254  Trump Could Save More Than $1 Billion Under Hi...        Jesse Drucker   \n",
-       "30255  Opinion | The Republican’s Guide to Presidenti...  The Editorial Board   \n",
-       "30256  Opinion | Who Can Beat Trump in 2020? - The Ne...       Jason Zengerle   \n",
-       "\n",
-       "            Date   Score  \n",
-       "0     2014-05-08 -0.6908  \n",
-       "1     2015-03-26  0.0000  \n",
-       "2     2015-05-13  0.0000  \n",
-       "3     2015-12-22  0.0000  \n",
-       "4     2015-12-28  0.4019  \n",
-       "...          ...     ...  \n",
-       "30252        NaT  0.0000  \n",
-       "30253        NaT -0.6808  \n",
-       "30254        NaT  0.4939  \n",
-       "30255        NaT  0.0000  \n",
-       "30256        NaT  0.0000  \n",
-       "\n",
-       "[30257 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df.to_csv('New York Times.csv', index=False)"
    ]
   }
  ],
