--- a/Sentiment Maker.ipynb
+++ b/Sentiment Maker.ipynb
@@ -26,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "news_dir = 'data/bucket/news/'\n",
@@ -38,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sentiment_analyzer_scores(sentence):\n",
@@ -95,8 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sentimentNews(sources):\n",
@@ -139,7 +145,6 @@
     "sentimentTwiiter(influencers)\n",
     "sentimentNews(sources)"
    ]
-<<<<<<< HEAD
   },
   {
    "cell_type": "code",
